apache_jira_description_comments/BEAM-5035_description.txt
Compilation failed for

[https://builds.apache.org/view/A-D/view/Beam/job/beam_PostCommit_Java_GradleBuild/1105/]
 > Task :beam-examples-java:compileTestJava FAILED
 /home/jenkins/jenkins-slave/workspace/beam_PostCommit_Java_GradleBuild/src/examples/java/src/test/java/org/apache/beam/examples/cookbook/BigQueryTornadoesIT.java:22: error: cannot access BigqueryMatcher
 import org.apache.beam.sdk.io.gcp.testing.BigqueryMatcher;
 ^
 bad class file: /home/jenkins/jenkins-slave/workspace/beam_PostCommit_Java_GradleBuild/src/sdks/java/io/google-cloud-platform/build/libs/beam-sdks-java-io-google-cloud-platform-2.7.0-SNAPSHOT-tests.jar(/org/apache/beam/sdk/io/gcp/testing/BigqueryMatcher.class)
 unable to access file: java.util.zip.ZipException: invalid stored block lengths
 Please remove or make sure it appears in the correct subdirectory of the classpath.
 1 error

 

https://github.com/apache/beam/blame/328129bf033bc6be16bc8e09af905f37b7516412/examples/java/src/test/java/org/apache/beam/examples/cookbook/BigQueryTornadoesIT.java

 